complete: UT, variable BugFix, README

--- a/api-gateway/README.adoc
+++ b/api-gateway/README.adoc
@@ -1,62 +1,25 @@
-= REST API Level 0 - Thorntail Booster
+API Gateway Service for Freelancer4J
+===
 
-IMPORTANT: This booster requires Java 8 JDK or greater and Maven 3.3.x.
+---
+Deploying the project to OpenShift
+---
+* **Firstly, deploying the `freelancer` and `project` service to the same OpenShift project**
+* **Second, login OpenShift using CLI and switch to the working project, then execute following commands.**
 
+```
+oc create configmap gateway-service --from-file=etc/project-defaults.yml
 
+mvn clean fabric8:deploy -Popenshift
+```
 
-== Runing the Booster Locally
-
-To run this booster on your local host:
-
-[source,bash,options="nowrap",subs="attributes+"]
-----
-$ unzip api-gateway.zip
-
-$ cd api-gateway
-
-$ mvn thorntail:run
-----
-
-== Interacting with the Booster Locally
-
-To interact with your booster while it's running locally, use the form at `http://localhost:8080` or the `curl` command:
-
-[source,bash,options="nowrap",subs="attributes+"]
-----
-$ curl http://localhost:8080/api/greeting
-{"content":"Hello, World!"}
-
-$ curl http://localhost:8080/api/greeting?name=Sarah
-{"content":"Hello, Sarah!"}
-----
-
-
-== Updating the Booster
-To update your booster:
-
-. Stop your booster.
-+
-NOTE: To stop your running booster in a Linux or macOS terminal, use `CTRL+C`. In a Windows command prompt, you can use `CTRL + Break(pause)`.
-
-. Make your change (e.g. edit `src/main/webapp/index.html`).
-. Restart your booster.
-. Verify the change took effect.
-
-
-== Running the Booster on a Single-node OpenShift Cluster
-If you have a single-node OpenShift cluster, such as Minishift or Red Hat Container Development Kit, link:http://launcher.fabric8.io/docs/minishift-installation.html[installed and running], you can also deploy your booster there. A single-node OpenShift cluster provides you with access to a cloud environment that is similar to a production environment.
-
-To deploy your booster to a running single-node OpenShift cluster:
-[source,bash,options="nowrap",subs="attributes+"]
-----
-$ oc login -u developer -p developer
-
-$ oc new-project MY_PROJECT_NAME
-
-$ mvn clean fabric8:deploy -Popenshift
-----
-
-== More Information
-You can learn more about this booster and rest of the Thorntail runtime in the link:http://launcher.fabric8.io/docs/thorntail-runtime.html[Thorntail Runtime Guide].
-
-NOTE: Run the set of integration tests included with this booster using `mvn clean verify -Popenshift,openshift-it`.
+---
+Testing the service
+---
+* Querying Freelancers data using following uri:
+  * `/gateway/freelancers/`
+  * `/gateway/freelancers/1`
+* Querying Projects by getting uri `/projects/`
+  * `/gateway/projects/`
+  * `/gateway/projects/111111`
+  * `/gateway/projects/status/OPEN`
